# SEKURO_TUGAS_1_Muhammad-Jordy-Abi-Perdana_PROGRAMMING

ros_soal_2/: video_link_gdrive
src/ros_soal_1/sekuro_package/: CMakeLists.txt  package.xml
src/ros_soal_1/sekuro_package/src/: publisher.cpp  subscriber.cpp
